# applepi

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  config.yaml
.cargo/: config.toml
src/: agent.rs  bot.rs  config.rs  lib.rs  llm.rs
src/cron/: commands.rs  mod.rs  store.rs
src/mcp/: client.rs  mod.rs  tool.rs
src/memory/: embed.rs  long_term.rs  mod.rs  short_term.rs
src/tools/: cron.rs  echo.rs  fs.rs  mod.rs  shell.rs  skill.rs
