[package]
name = "applepi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
croner = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
# ort 用 load-dynamic：运行时 dlopen libonnxruntime.so，避免静态链接 C++ 符号
# （Linux 下 ort-sys 静态库会触发 undefined reference to `__cxa_call_terminate`）。
# 代价：Linux 部署机需预装 onnxruntime 共享库，详见 README「Linux 部署」。
fastembed = { version = "5.17.3", default-features = false, features = [
    "ort-load-dynamic",
    "hf-hub",
    "hf-hub-rustls-tls",
] }
