[package]
name = "applepi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
croner = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
# 本地 embedding 推理：纯 Rust candle（不走 ONNX Runtime，规避 ort 静态链接
# 在 Linux 触发 __cxa_call_terminate 的问题）。BGE/E5 = BERT + mean pooling + L2。
candle-core = { version = "0.11.0", default-features = false }
candle-nn = { version = "0.11.0", default-features = false }
candle-transformers = { version = "0.11.0", default-features = false }
# tokenizers 默认启用 onig（正则）feature；与 fastembed 保持一致。
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
# HuggingFace Hub 客户端：用 ureq（sync）下载模型，配合 spawn_blocking。
# 关闭 default-features 避免 native-tls/openssl；ureq 自身默认走 rustls。
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
